--- a/app/src/main/res/layout/_main_activity__comment.xml
+++ b/app/src/main/res/layout/_main_activity__comment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:id="@+id/_main_activity__comment"
@@ -10,46 +11,50 @@
         android:background="@drawable/tt_downloader"
         android:descendantFocusability="beforeDescendants"
         android:focusableInTouchMode="true"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:scrollbars="vertical" >
-        
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:scrollbars="vertical">
+
         <Button
             android:id="@+id/buttonSearchComments"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:text="@string/strSearchComment" />
-        
+
         <TextView
             android:id="@+id/textViewSearchTextComments"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/buttonSearchComments"
             android:text="@string/searchTextComment"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:layout_below="@+id/buttonSearchComments"
             android:textColor="@color/Black" />
 
         <AutoCompleteTextView
             android:id="@+id/editTextSuchtextKommentare"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textViewSearchTextComments"
-            android:layout_alignParentRight="true"
             android:layout_below="@+id/textViewSearchTextComments"
+            android:layout_alignStart="@+id/textViewSearchTextComments"
+            android:layout_alignLeft="@+id/textViewSearchTextComments"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:ems="10"
+            android:hint="@string/strSearchComment"
             android:inputType="text"
-            android:selectAllOnFocus="false" >
-        </AutoCompleteTextView>
+            android:selectAllOnFocus="false" />
 
         <TextView
             android:id="@+id/textViewGebiet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/editTextSuchtextKommentare"
             android:layout_below="@+id/editTextSuchtextKommentare"
+            android:layout_alignStart="@+id/editTextSuchtextKommentare"
+            android:layout_alignLeft="@+id/editTextSuchtextKommentare"
             android:text="@string/lblGebiet"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/Black" />
@@ -58,33 +63,37 @@
             android:id="@+id/spinnerAreaComment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textViewGebiet"
-            android:layout_below="@+id/textViewGebiet" />
+            android:layout_below="@+id/textViewGebiet"
+            android:layout_alignStart="@+id/textViewGebiet"
+            android:layout_alignLeft="@+id/textViewGebiet" />
 
         <include
             android:id="@+id/includeLimitsForScale4CommentSearch"
+            layout="@layout/main_activity_seekbar_limits_of_scale"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
             android:layout_below="@+id/spinnerAreaComment"
-            layout="@layout/main_activity_seekbar_limits_of_scale" />
-        
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true" />
+
         <TextView
             android:id="@+id/TextViewCommmentGrading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/includeLimitsForScale4CommentSearch"
             android:layout_below="@+id/includeLimitsForScale4CommentSearch"
+            android:layout_alignStart="@+id/includeLimitsForScale4CommentSearch"
+            android:layout_alignLeft="@+id/includeLimitsForScale4CommentSearch"
             android:text="@string/strMinGradingInComment"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/Black" />
-        
+
         <SeekBar
             android:id="@+id/seekBarMinGradingInComment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/TextViewCommmentGrading"
             android:layout_below="@+id/TextViewCommmentGrading"
+            android:layout_alignStart="@+id/TextViewCommmentGrading"
+            android:layout_alignLeft="@+id/TextViewCommmentGrading"
             android:max="@integer/Six"
             android:progress="@integer/Zero" />
 
