--- a/app/src/main/res/layout/_main_activity__route.xml
+++ b/app/src/main/res/layout/_main_activity__route.xml
@@ -21,7 +21,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:text="@string/strSearchRoute" />
+            android:text="@string/strSearchRoute"
+            android:layout_alignParentStart="true" />
         
         <TextView
             android:id="@+id/textViewSearchTextRoutes"
@@ -40,9 +41,11 @@
             android:layout_alignParentRight="true"
             android:ems="10"
             android:inputType="text"
-            android:selectAllOnFocus="false" 
-            android:layout_below="@+id/textViewSearchTextRoutes" >
-        </AutoCompleteTextView>
+            android:hint="@string/strSearchRoute"
+            android:selectAllOnFocus="false"
+            android:layout_below="@+id/textViewSearchTextRoutes"
+            android:layout_alignStart="@+id/textViewSearchTextRoutes"
+            android:layout_alignParentEnd="true" />
 
         <TextView
             android:id="@+id/textViewGebiet"
@@ -52,14 +55,16 @@
             android:text="@string/lblGebiet"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/Black" 
-            android:layout_below="@+id/editTextSuchtextWege"/>
+            android:layout_below="@+id/editTextSuchtextWege"
+            android:layout_alignStart="@+id/editTextSuchtextWege" />
 
         <Spinner
             android:id="@+id/spinnerAreaRoute"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/textViewGebiet"
-            android:layout_below="@+id/textViewGebiet" />
+            android:layout_below="@+id/textViewGebiet"
+            android:layout_alignStart="@+id/textViewGebiet" />
 
         <include
             android:id="@+id/includeLimitsForScale4RouteSearch"
@@ -67,7 +72,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/spinnerAreaRoute"
-            layout="@layout/main_activity_seekbar_limits_of_scale" />
+            layout="@layout/main_activity_seekbar_limits_of_scale"
+            android:layout_alignParentStart="true" />
 
         <TextView
             android:id="@+id/TextViewNumberOfComments"
@@ -85,7 +91,8 @@
             android:layout_alignLeft="@+id/TextViewNumberOfComments"
             android:layout_below="@+id/TextViewNumberOfComments"
             android:max="@integer/Twenty"
-            android:progress="@integer/Zero" />
+            android:progress="@integer/Zero"
+            android:layout_alignStart="@+id/TextViewNumberOfComments" />
 
         <TextView
             android:id="@+id/TextViewMinOfMeanRating"
@@ -96,7 +103,8 @@
             android:layout_marginTop="16dp"
             android:text="@string/strMinOfMeanRating"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/Black" />
+            android:textColor="@color/Black"
+            android:layout_alignStart="@+id/seekBarNumberOfComments" />
 
         <SeekBar
             android:id="@+id/seekBarMinOfMeanRating"
@@ -105,7 +113,8 @@
             android:layout_alignLeft="@+id/TextViewMinOfMeanRating"
             android:layout_below="@+id/TextViewMinOfMeanRating"
             android:max="@integer/Six"
-            android:progress="@integer/Zero" />
+            android:progress="@integer/Zero"
+            android:layout_alignStart="@+id/TextViewMinOfMeanRating" />
 
     </RelativeLayout>
 
