--- a/app/src/main/res/layout/_main_activity__summit.xml
+++ b/app/src/main/res/layout/_main_activity__summit.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@drawable/tt_downloader" >
 
     <RelativeLayout
         android:id="@+id/_main_activity__summit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/tt_downloader"
         android:descendantFocusability="beforeDescendants"
         android:focusableInTouchMode="true"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
+
         android:scrollbars="vertical" >
 
         <LinearLayout
@@ -22,20 +23,23 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:gravity="center_horizontal"
-            android:weightSum="1.0" >
+            android:weightSum="1.0"
+            android:layout_alignParentStart="true">
 
 	        <Button
 	            android:id="@+id/button_INFO"
 	            android:layout_width="0dip"
 	            android:layout_height="wrap_content"
-            	android:layout_weight=".35" 
+            	android:layout_weight=".35"
+                style="?android:attr/buttonBarButtonStyle"
 	            android:text="@string/INFO" />
 
             <Button
                 android:id="@+id/buttonSearchSummit"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
-            	android:layout_weight=".65" 
+            	android:layout_weight=".65"
+                style="?android:attr/buttonBarButtonStyle"
                 android:text="@string/strSearchSummit" />
 		</LinearLayout>
         
@@ -56,8 +60,11 @@
             android:layout_alignParentRight="true"
             android:layout_below="@+id/textViewSuchTextGipfel"
             android:ems="10"
+            android:hint="@string/strSearchSummit"
             android:inputType="text"
-            android:selectAllOnFocus="false" >
+            android:selectAllOnFocus="false"
+            android:layout_alignStart="@+id/textViewSuchTextGipfel"
+            android:layout_alignParentEnd="true">
         </AutoCompleteTextView>
 
         <TextView
@@ -68,14 +75,16 @@
             android:layout_below="@+id/editTextSuchtextGipfel"
             android:text="@string/lblGebiet"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/Black" />
+            android:textColor="@color/Black"
+            android:layout_alignStart="@+id/editTextSuchtextGipfel" />
 
         <Spinner
             android:id="@+id/spinnerAreaSummit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/textViewGebiet"
-            android:layout_below="@+id/textViewGebiet" />
+            android:layout_below="@+id/textViewGebiet"
+            android:layout_alignStart="@+id/textViewGebiet" />
 
         <include
             android:id="@+id/includeAnzahlDerWege"
@@ -83,7 +92,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="false"
             android:layout_below="@+id/spinnerAreaSummit"
-            layout="@layout/main_activity_seekbar_number_of_routes" />
+            layout="@layout/main_activity_seekbar_number_of_routes"
+            android:layout_alignParentStart="false" />
 
         <include
             android:id="@+id/includeAnzahlDerSternchenWege"
@@ -91,7 +101,8 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/includeAnzahlDerWege"
             android:layout_below="@+id/includeAnzahlDerWege"
-            layout="@layout/main_activity_seekbar_number_of_stared_routes" />
+            layout="@layout/main_activity_seekbar_number_of_stared_routes"
+            android:layout_alignStart="@+id/includeAnzahlDerWege" />
 
     </RelativeLayout>
 
