--- a/app/src/main/res/layout/comments_activity_found_lv_list.xml
+++ b/app/src/main/res/layout/comments_activity_found_lv_list.xml
@@ -4,6 +4,7 @@
     android:id="@+id/summits_activity_found_lv_list"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@color/Blue"
     android:clipToPadding="true"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
