--- a/app/src/main/res/layout/route_activity_found_header.xml
+++ b/app/src/main/res/layout/route_activity_found_header.xml
@@ -1,5 +1,4 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/route_activity_found_header"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -22,7 +21,8 @@
         android:text="@string/tableCol_RouteName"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/Black"
-        android:textSize="@dimen/lv_header" />
+        android:textSize="@dimen/lv_header"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/textView_tableCol_SummitName_inComment"
@@ -34,7 +34,8 @@
         android:focusable="false"
         android:text="@string/tableCol_SummitName"
         android:textColor="@color/Black"
-        android:textSize="@dimen/header_small" />
+        android:textSize="@dimen/header_small"
+        android:layout_alignParentStart="true" />
 
     <LinearLayout
         android:id="@+id/linearlayout_SpinnerRouteAsscended_RouteAscendDay_inComment"
@@ -43,7 +44,8 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView_tableCol_SummitName_inComment"
         android:gravity="center_horizontal"
-        android:weightSum="1.0" >
+        android:weightSum="1.0"
+        android:layout_alignParentStart="true">
 
         <Spinner
             android:id="@+id/spinnerRouteAsscended_inComment"
@@ -74,11 +76,14 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/linearlayout_SpinnerRouteAsscended_RouteAscendDay_inComment"
         android:configChanges="orientation|keyboardHidden"
-        android:gravity="top|left"
+        android:gravity="start|end"
         android:inputType="text|textAutoCorrect|textAutoComplete|textMultiLine"
         android:lines="4"
+        android:text="@string/tableCol_MyComment"
+        android:hint="@string/tableCol_MyComment"
         android:scrollbarStyle="outsideInset"
         android:scrollbars="vertical"
-        android:selectAllOnFocus="false" />
+        android:selectAllOnFocus="false"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
