--- a/app/src/main/res/layout/routes_lv_item_found.xml
+++ b/app/src/main/res/layout/routes_lv_item_found.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     android:gravity="center_horizontal"
+    android:background="@color/Blue"
     android:paddingBottom="5dp"
     android:weightSum="1.0" >
 
@@ -13,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_weight=".97"
         android:background="@color/Black"
-        android:gravity="left|right"
+        android:gravity="start|end"
         android:orientation="vertical" >
 
         <TextView
@@ -27,7 +28,8 @@
             android:focusable="false"
             android:text="@string/tableCol_RouteName"
             android:textColor="@color/White"
-            android:textSize="@dimen/lv_header" />
+            android:textSize="@dimen/lv_header"
+            android:layout_alignParentStart="true" />
 
         <TextView
             android:id="@+id/textView_tableCol_SummitName2Route"
@@ -40,7 +42,8 @@
             android:focusable="false"
             android:text="@string/tableCol_SummitName"
             android:textColor="@color/White"
-            android:textSize="@dimen/lv_item" />
+            android:textSize="@dimen/lv_item"
+            android:drawableEnd="@drawable/grey_arrow" />
 
         <TextView
             android:id="@+id/textView_tableCol_NumberOfComments"
@@ -53,7 +56,8 @@
             android:focusable="false"
             android:text="@string/tableCol_NumberOfComments"
             android:textColor="@color/White"
-            android:textSize="@dimen/lv_item" />
+            android:textSize="@dimen/lv_item"
+            android:layout_alignParentStart="true" />
 
         <TextView
             android:id="@+id/textView_tableCol_MeanGrade"
@@ -66,7 +70,8 @@
             android:focusable="false"
             android:text="@string/tableCol_MeanGrade"
             android:textColor="@color/White"
-            android:textSize="@dimen/lv_item" />
+            android:textSize="@dimen/lv_item"
+            android:layout_alignParentStart="true" />
 
         <LinearLayout
             android:id="@+id/RouteAscendDetails"
@@ -75,7 +80,8 @@
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/textView_tableCol_MeanGrade"
             android:gravity="center_horizontal"
-            android:weightSum="1.0" >
+            android:weightSum="1.0"
+            android:layout_alignParentStart="true">
 
             <TextView
                 android:id="@+id/CheckBoxRouteAsscended_in_lv"
@@ -116,7 +122,8 @@
             android:focusable="false"
             android:text="@string/tableCol_MyComment"
             android:textColor="@color/White"
-            android:textSize="@dimen/lv_item" />
+            android:textSize="@dimen/lv_item"
+            android:layout_alignParentEnd="true" />
     </RelativeLayout>
 
     <ImageView
