--- a/app/src/main/res/layout/summit_found_lv_w_header.xml
+++ b/app/src/main/res/layout/summit_found_lv_w_header.xml
@@ -4,6 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:clipToPadding="true"
+    android:background="@color/Blue"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
