--- a/app/src/main/res/layout/routes_activity_found_lv_list.xml
+++ b/app/src/main/res/layout/routes_activity_found_lv_list.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/summit_found_lv_w_header"
+    android:id="@+id/routes_activity_found_lv_list"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:clipToPadding="true"
@@ -17,11 +17,11 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true" />
 
-    <ListView
-        android:id="@+id/list_summits"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview_in_routes_activity_found_lv_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:divider="@color/Black"
         tools:listitem="@layout/routes_lv_item_found" >
-    </ListView>
+    </android.support.v7.widget.RecyclerView>
 </RelativeLayout>
