--- a/app/src/main/res/layout/_main_activity_pager.xml
+++ b/app/src/main/res/layout/_main_activity_pager.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/frag_container_pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Blue"
