--- a/app/src/main/res/layout/summit_lv_item_found.xml
+++ b/app/src/main/res/layout/summit_lv_item_found.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_weight=".97"
         android:background="@color/Black"
-        android:gravity="left|right"
+        android:gravity="start|end"
         android:orientation="vertical" >
 
         <TextView
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignTop="@id/textView_tableCol_SummitName"
             android:layout_margin="1dp"
@@ -28,13 +29,14 @@
             android:focusable="false"
             android:text="@string/tableCol_SummitName"
             android:textColor="@color/White"
-            android:textSize="@dimen/lv_header" />
+            android:textSize="@dimen/lv_header"/>
 
         <TextView
             android:id="@+id/textView_tableCol_Area"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_below="@+id/textView_tableCol_SummitName"
             android:layout_margin="1dp"
             android:background="@color/Blue"
@@ -44,10 +46,11 @@
             android:textSize="@dimen/lv_item" />
 
         <TextView
-            android:id="@+id/textView_tableColStrUser"
+            android:id="@+id/textView_tableColSummitNumberOfficial"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_below="@+id/textView_tableCol_Area"
             android:layout_margin="1dp"
             android:background="@color/Blue"
@@ -57,11 +60,12 @@
             android:textSize="@dimen/lv_item" />
 
         <TextView
-            android:id="@+id/textView_tableCol_DateOfComment"
+            android:id="@+id/textView_tableCol_NumberOfRoutes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/textView_tableColStrUser"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/textView_tableColSummitNumberOfficial"
             android:layout_margin="1dp"
             android:background="@color/Blue"
             android:focusable="false"
@@ -74,7 +78,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/textView_tableCol_DateOfComment"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/textView_tableCol_NumberOfRoutes"
             android:layout_margin="1dp"
             android:background="@color/Blue"
             android:focusable="false"
@@ -83,10 +88,11 @@
             android:textSize="@dimen/lv_item" />
 
         <TextView
-            android:id="@+id/textView_tableCol_NumberOfComments"
+            android:id="@+id/textView_tableCol_EasiestGrade"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_below="@+id/textView_tableCol_NumberofStarRoutes"
             android:layout_margin="1dp"
             android:background="@color/Blue"
@@ -109,45 +115,48 @@
         android:focusable="false" />
         -->
 
-        <CheckBox
-            android:id="@+id/CheckBoxAsscended_in_lv"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/checkBox_and_date_asscended"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/textView_tableCol_EasiestGrade"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/textView_tableCol_NumberOfComments"
-            android:layout_margin="1dp"
-            android:background="@color/Blue"
-            android:button="@drawable/checkbox_selector"
-            android:enabled="false"
-            android:focusable="false"
-            android:text="@string/tableCol_IsAscended"
-            android:textColor="@color/White"
-            android:textSize="@dimen/lv_item" />
+            android:layout_alignParentStart="true"
+            android:orientation="horizontal" >
+            <CheckBox
+                android:id="@+id/checkBoxAsscended_in_lv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:background="@color/Blue"
+                android:button="@drawable/checkbox_selector"
+                android:enabled="false"
+                android:focusable="false"
+                android:text="@string/tableCol_IsAscended"
+                android:textColor="@color/White"
+                android:textSize="@dimen/lv_item" />
 
+            <TextView
+                android:id="@+id/textView_tableCol_DateAsscended"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:background="@color/Blue"
+                android:focusable="false"
+                android:textColor="@color/White"
+                android:textSize="@dimen/lv_item" />
+        </LinearLayout>
         <TextView
             android:id="@+id/textView_tableCol_MyComment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/CheckBoxAsscended_in_lv"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/checkBox_and_date_asscended"
             android:layout_margin="1dp"
             android:background="@color/Blue"
             android:focusable="false"
             android:text="@string/tableCol_MyComment"
-            android:textColor="@color/White"
-            android:textSize="@dimen/lv_item" />
-
-        <TextView
-            android:id="@+id/textView_tableCol_DateAsscended"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/textView_tableCol_MyComment"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/textView_tableCol_NumberOfComments"
-            android:layout_margin="1dp"
-            android:layout_toRightOf="@+id/CheckBoxAsscended_in_lv"
-            android:background="@color/Blue"
-            android:focusable="false"
             android:textColor="@color/White"
             android:textSize="@dimen/lv_item" />
     </RelativeLayout>
